# tanks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-migrations  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  smoke_test.py  tox.ini
.github/workflows/: lint.yml  test.yml
alembic/: env.py
alembic/versions/: cd51f9f25127_create_tanks_tankvolumes_and_.py
tanks/: config.py  crud.py  dependencies.py  main.py  models.py  schemas.py
tanks/hooks/: avgsales_updater.py  sales_monitor.py
tanks/routers/: tank_volumes.py  tanksr.py
tests/: conftest.py  helpers.py  test_average_sales.py  test_crud.py  test_dependencies.py  test_tanks_crud.py
tests/hooks/: test_avgsales_updater.py  test_sales_monitor.py
tests/routers/: test_tank_volumes.py  test_tanksr.py
